fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ p {
     min-height: 100vh;
     box-sizing: border-box;
     background: #f2f2f2;
-    padding: 15% 0 3%;
+    padding: 5em 0 1em;
     margin: 0;
 }
 
