--- a/src/components/articleCard.css
+++ b/src/components/articleCard.css
@@ -16,6 +16,7 @@
     background: white;
     box-shadow: 0 0 20px #d1d1d1;
     overflow: hidden;
+    height: 100%;
 }
 
 .card-body {
