--- a/src/pages/profilepage.css
+++ b/src/pages/profilepage.css
@@ -48,7 +48,8 @@
     background: white;
     border-radius: 0.2em;
     box-shadow: 0 0 0.5em #d1d1d1;
-    margin-bottom: 0.5em
+    margin-bottom: 0.5em;
+    max-width: 550px;
 }
 
 .user-details h3 {
